--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -10,6 +10,10 @@
 header{
     background-color: #FFF3f1;
     padding-top: 50px;
+    background: url("../images/developer.png") ,url(../images/header_bg.png) #FFF3f1;
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+
 }
 
 *{
@@ -55,6 +59,43 @@ nav .menu a{
     font-weight: bold;
     color: white ;
     align-items: center;
+    cursor: pointer;
 }
+
+#banner{
+    
+    margin: 47px 38px 0px 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#banner .banner-content{
+    max-width: 585px;
+}
+#banner .banner-content h2{
+    font-size: 45px;
+    font-weight: 600;
+    color: #474747;
+    margin-bottom: 5px;
+}
+#banner .banner-content h1{
+    font-size: 85px;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 20px;
+}
+#banner .banner-content p{
+    font-size: 18px;
+    
+    line-height: 30px;
+    color: #757575;
+    margin-bottom: 30px;
+}
+#banner .banner-image img{
+    max-width: 585px;
+    vertical-align: middle;
+}
+
+
 
 
