--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -62,6 +62,8 @@ nav .menu a{
     cursor: pointer;
 }
 
+
+
 #banner{
     
     margin: 47px 38px 0px 230px;
@@ -95,6 +97,59 @@ nav .menu a{
     max-width: 585px;
     vertical-align: middle;
 }
+#about{
+    padding-top: 130px;
+
+}
+#about .about-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 131px 157px;
+
+
+}
+
+.section-heading{
+    max-width: 827px;
+    text-align: center;
+}
+
+.section-heading h2{
+    font-weight: 45px;
+    margin-bottom: 30px;
+}
+
+.section-heading p{
+    font-weight: 18px;
+    margin-bottom: 30px;
+    line-height: 30px;
+    color: #757575;
+}
+
+
+#about .about-container .about-info{
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info .about-card p{
+    font-weight: 18px;
+    margin-bottom: 30px;
+    line-height: 30px;
+    color: #757575;
+
+}
+.about-info .about-card h4{
+    font-weight: 20px;
+    margin-bottom: 30px;
+    line-height: 30px;
+    color: #757575;
+
+}
+
 
 
 
