--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -115,6 +115,7 @@ nav .menu a{
 .section-heading{
     max-width: 827px;
     text-align: center;
+    margin: 0 auto;
 }
 
 .section-heading h2{
@@ -149,7 +150,81 @@ nav .menu a{
     color: #757575;
 
 }
+#skills ,#resume
+{
+    padding-top: 130px;
+    
+}
+#skills .skills-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
+#skills .skills-container .skill-box{
+    display: flex;
+    gap: 24px;
+} 
+.skill-box .skill-card{
+    padding: 30px;
+    box-shadow: 0 6px 50px 0 #00000027;
+    max-width: 267px;
+}
+.skill-card img{
+    max-width: 44px;
+    margin-bottom: 30px;
+}
+.skill-card h3{
+    font-size: 20px;
+    color: #181818;
+    margin-bottom: 20px;
+}
+.skill-card p{
+    font-size: 16px;
+    color: #18181805;
+    line-height: 28px;
+}
+
+#resume .resume-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 113px auto 0;
+    display: flex;
+    gap: 24px;
+}
+#resume .resume-container hr{
+    margin: 30px 0;
+    
+}
+.resume-container .section-title{
+    color: #474747;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+.resume-card{
+    max-width: 511px;
+    margin-right: 47px;
+
+}
+.resume-card .card-title{
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #474747;
+}
+.resume-card .card-info{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    color: #757575;
+}
+.resume-card .card-text{
+    font-size: 16px;
+    
+    
+    color: #757575;
+    line-height: 28px;
+}
 
 
 
