--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -12,7 +12,7 @@ header{
     padding-top: 50px;
     background: url("../images/developer.png") ,url(../images/header_bg.png) #FFF3f1;
     background-repeat: no-repeat;
-    background-position: top left, bottom right;
+    background-position: 23px 38px, bottom right;
 
 }
 
@@ -234,39 +234,50 @@ footer{
     padding: 130px 0;
 }
 
-.footer-container{
+footer .footer-container{
+    width: 71%;
+    max-width: 1140;
+    margin: 0 auto;
     display: flex;
-    justify-content: space-around;
-    padding-top: 130px;
+    gap: 116px;
+    
     
 
 }
- .footer-container .social{
+ 
+ .footer-container .social {
     max-width: 562px;
-    padding-left: 230px;
+    
+
  }
- .footer-container .social h2{
-    font-size: 35px;
-    font-weight: bold;
+ footer-container h2{
+   color: #181818;
+   font-size: 45px;
+   margin-bottom: 20px;
+    
 
  }
  .footer-container .social p{
     font-size: 16px;
     line-height: 28px;
+    margin-bottom: 20px;
+    color: #474747;
+
+ }
+ .footer-container .icons a{
+    margin-right: 24px;
     padding-top: 20px;
+    
+
+ }
+.footer-container form input[type="text"], .footer-container form textarea{
+    width: 461px;
+    padding: 18px 31px;
+    margin-bottom: 24px;
+    border: none;
+    border-radius: 5px;
+
     color: #757575;
-
- }
- .footer-container .social .icons{
-    
-    padding-top: 20px;
-    
-
- }
-.footer-container .form{
-    max-width: 461px;
-    padding-right: 230px;
-    border: 1px solid red;
  }
  .footer-container .form h2{
     font-size: 35px;
